--- a/SauceDemoFinalProject/pom.xml
+++ b/SauceDemoFinalProject/pom.xml
@@ -1,12 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-         
+
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.test</groupId>
     <artifactId>SauceLabs</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <name>SauceLabs Automation Project</name>
+    <description>Automatización de pruebas con Selenium y TestNG</description>
+    <url>https://github.com/AthziriHerrejon/SauceDemoAlgorithmPractice</url>
 
     <dependencies>
         <!-- Selenium Java -->
@@ -16,7 +19,7 @@
             <version>4.17.0</version>
         </dependency>
 
-        <!-- DevTools compatible (v120 es la más alta publicada hasta ahora) -->
+        <!-- DevTools compatible -->
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-devtools-v120</artifactId>
@@ -45,4 +48,20 @@
             <version>5.8.0</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.1.2</version>
+                <configuration>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>testng.xml</suiteXmlFile>
+                    </suiteXmlFiles>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
